overflow fixes

--- a/ui/src/components/common/SlidingSidebar/partials/VertexDetails/partials/Errors/partials/CollapsableError/style.css
+++ b/ui/src/components/common/SlidingSidebar/partials/VertexDetails/partials/Errors/partials/CollapsableError/style.css
@@ -6,6 +6,7 @@
 .collapsable-error-title-box {
   display: flex;
   width: 100%;
+  margin: 1rem 0;
   gap: 1rem;
   align-items: center;
 }
@@ -16,13 +17,8 @@
   color: #878789;
 }
 
-.collapsable-error-message-title-text {
-  flex-grow: 1;
-  font-weight: 500;
-  color: #878789;
-}
-
 .collapsable-error-accordion-details {
+  display: flex;
   height: 35rem;
   padding: 0;
 }
@@ -30,6 +26,7 @@
 .collapsable-error-accordion-details-box {
   display: flex;
   background: #f4f5f8;
+  width: 100%;
   height: 100%;
   padding: 2rem 0;
   gap: 1rem;
@@ -37,7 +34,6 @@
 
 .collapsable-error-accordion-details-title {
   margin-left: 6rem;
-  margin-right: 25rem;
   width: 25rem;
   font-weight: 500;
   color: #878789;
@@ -45,6 +41,8 @@
 
 .collapsable-error-accordion-details-title-content {
   font-size: 1.4rem;
-  height: 40rem;
+  height: 30rem;
+  width: 50rem;
   flex-grow: 1;
+  overflow: scroll;
 }
