--- a/ui/src/components/common/SlidingSidebar/partials/VertexDetails/partials/Errors/style.css
+++ b/ui/src/components/common/SlidingSidebar/partials/VertexDetails/partials/Errors/style.css
@@ -41,10 +41,3 @@
   color: #878789;
   font-size: 1.6rem;
 }
-
-.vertex-error-message-title-text {
-  flex-grow: 1;
-  font-weight: 600;
-  color: #878789;
-  font-size: 1.6rem;
-}
